fix(heading): Make thick again on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -623,6 +623,10 @@ body.dialog-open {
     line-height: 125%;
   }
 
+  h1 {
+    font-weight: 400;
+  }
+
   .hero-description {
     column-count: 1;
   }
